--- a/NoteApp/Views/List/Index.cshtml
+++ b/NoteApp/Views/List/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
-@*@model NoteApp.Models.ListModel*@
 @using NoteApp.Models;
 @model ListModel
 <br />
-
 <div>
     <select class="form-control" required multiple="multiple" id="tagData" name="Tags" style="width: 82%; max-width: 134%;"></select>
     <button class="btn btn-secondary" onclick="SearchByTags();">Show Notes</button>
@@ -33,45 +31,4 @@
 @{Html.RenderAction("RecentNotes", "List");}
 <hr style=" border: 5px solid green; border-radius: 10px;" />
 @{Html.RenderAction("GetLists", "List");}
-<script>
-    $(document).ready(function () {
-        $('#myDIV').hide();
-        console.log("ready!");
-        $("#tagData").select2({
-            placeholder: 'Search by Tag...',
-            tags: true,
-            maximumSelectionLength: 1,
-            tokenSeparators: [',', ' ']
-        })
-    });
-    function txtboxShow() {
-        var x = document.getElementById("myDIV");
-        if (x.style.display === "none") {
-            x.style.display = "block";
-        } else {
-            x.style.display = "none";
-        }
-    }
-
-    function ClearSearchBar() {
-        console.log("Clear Search bar !")
-        $('#tagData').val(null).trigger('change');
-    }
-    function SearchByTags() {
-        var tagitem = $('#tagData').val();
-        if (tagitem == "") {
-            alert("Please Insert Tag First !!")
-        }
-        else {
-            console.log(tagitem);
-            window.location.href = "/List/SearchByTags?Tag=" + tagitem;
-        }
-
-    }
-
-    setTimeout(function () {
-        $('#validation').fadeOut('fast');
-    }, 3000); // <-- time in milliseconds
-
-
-</script>
+<script src="~/Scripts/listIndex.js"></script>
