--- a/NoteApp/Views/List/SearchByTags.cshtml
+++ b/NoteApp/Views/List/SearchByTags.cshtml
@@ -4,19 +4,10 @@
 @{
     ViewBag.Title = "SearchNotes";
 }
-<style>
-    .center {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 60%;
-    }
-</style>
-
 @if (Model.Count() == 0)
 {
     <img src="https://cdn.dribbble.com/users/1135689/screenshots/3957784/no-result-found.png" class="center" />
-    <a href="http://localhost:58940/List" class="center btn btn-primary">
+    <a href="/List/Index" class="center btn btn-primary">
         <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
         Back to List
     </a>
@@ -24,13 +15,12 @@
 else
 {
     <br />
-    <a href="http://localhost:58940/List" class=" btn btn-primary">
+    <a href="/List/Index" class=" btn btn-secondary">
         <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
         Back to List
     </a>
     var a = Model.Count();
-
-    <button class=" btn btn-primary" style="float:right">
+    <button class=" btn btn-secondary" style="float:right">
         Total Notes: &nbsp; @a
     </button>
     <div class="card-deck ">
@@ -44,7 +34,6 @@ else
                         <span class="badge bg-secondary">Note Id: &nbsp;@item.NoteId</span>
                     </div>
                     <div class="card-body text-success" style="text-align:center">
-
                         @if (item.NoteFile != null)
                         {
                             FileInfo fi = new FileInfo(item.NoteFile);
@@ -62,12 +51,9 @@ else
                             }
                             else
                             {
-
                                 <img src=" @item.NoteFile" width="375" height="300">
-
                             }
                         }
-
                         <p class="card-text">@item.NoteDesciption  </p>
                     </div>
                     <div class="card-footer bg-transparent border-success" style="text-align:center">
@@ -77,7 +63,5 @@ else
             }
         </div>
     </div>
-
 }
-
-
+<link href="~/Content/css/searchByTag.css" rel="stylesheet" />
