--- a/NoteApp/Views/List/ShowNotes.cshtml
+++ b/NoteApp/Views/List/ShowNotes.cshtml
@@ -4,27 +4,11 @@
 @{
     ViewBag.Title = "ShowNotes";
 }
-<style>
-    .center {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 60%;
-    }
-            .summary {
-   
-    white-space: nowrap;
 
-    overflow: hidden;
-   text-overflow: ellipsis;  
-   -webkit-line-clamp: 5; /* number of lines to show */
-
-}
-</style>
 @if (Model.Count() == 0)
 {
     <img src="https://cdn.dribbble.com/users/1135689/screenshots/3957784/no-result-found.png" class="center" />
-    <a href="http://localhost:58940/List" class="center btn btn-primary">
+    <a href="/List/Index" class="center btn btn-primary">
         <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
         Back to List
     </a>
@@ -32,12 +16,11 @@
 else
 {
     <br />
-    <a href="http://localhost:58940/List" class=" btn btn-secondary">
+    <a href="/List/Index" class=" btn btn-secondary">
         <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
         Back to List
     </a>
     var a = Model.Count();
-
     <button class=" btn btn-secondary" style="float:right">
       Total Notes: &nbsp; @a
     </button>
@@ -91,21 +74,9 @@ else
                     <div class="card-footer bg-transparent border-success" style="text-align:center">
                         <span class="badge bg-secondary">Created Date: &nbsp;@item.CreatedDate</span>
                     </div>
-                </div>
-                                
+                </div>                              
                             }
         </div>
     </div>
-
 }
-<script>
- $('#readmore').click(function() {
-        var text = $(this).prev('#notetext');
-    text.toggleClass('summary');
-    if(text.hasClass('summary')) {
-        $(this).text('more');
-    } else {
-        $(this).text('less');
-    }
-});
-</script>
+<link href="~/Content/css/showNotes.css" rel="stylesheet" />
