--- a/NoteApp/Views/Shared/_RecentNotes.cshtml
+++ b/NoteApp/Views/Shared/_RecentNotes.cshtml
@@ -1,20 +1,12 @@
 ﻿
 @model IEnumerable<NoteApp.Models.NotesModel>
-<style>
-    #audio {
-        display: block;
-        border-radius: 20px;
-        margin: 0 auto;
-    }
-
-    .summary {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        -webkit-line-clamp: 5; /* number of lines to show */
-    }
-</style>
+    <link href="~/Content/css/recenetNotes.css" rel="stylesheet" />
 <span class="badge rounded-pill bg-dark">Recent Add/Modified :</span>
+@if (Model.Count() == 0)
+{
+    <br />
+    <span style="margin-left: 574px;" class="badge rounded-pill bg-danger">No Note Added Recently..</span>
+}
 <div class="card-deck ">
     <div class="row">
         @foreach (var item in Model)
@@ -67,17 +59,14 @@
 
                             }
                         }
-
                         @if (item.NoteDesciption != null)
                         {
-
-                            <p id="notetext" style="text-align:center" class="card-text summary">@item.NoteDesciption</p>
-                                if (item.NoteDesciption != null && item.NoteDesciption.Length > 250)
-                                {
-                                    <a id="readmore" class="btn btn-light" href="#">Read More</a>
-                                }
+                           <p id="notetext" style="text-align:center" class="card-text summary">@item.NoteDesciption</p>
+                            if (item.NoteDesciption != null && item.NoteDesciption.Length > 250)
+                            {
+                                <a id="readmore" class="btn btn-light" href="#">Read More</a>
+                            }
                         }
-
                     </div>
                     <div class="card-footer bg-transparent border-success" style="text-align:center">
                         <span class="badge bg-secondary" style="margin-left: -13px;">Created Date: &nbsp;@item.CreatedDate</span>
@@ -88,28 +77,7 @@
             {
                 <h5 style="text-align:center">Not Found !!</h5>
             }
-
         }
-
     </div>
 </div>
-<script>
-    $(function() {
-		$('.pop').on('click', function() {
-            $('.imagepreview').attr('src', $(this).find('img').attr('src'));       
-			$('#imagemodal').modal('show');   
-		});		
-});
-
-  
-
-    $('#readmore').click(function () {
-        var text = $(this).prev('#notetext');
-        text.toggleClass('summary');
-        if (text.hasClass('summary')) {
-            $(this).text('more');
-        } else {
-            $(this).text('less');
-        }
-    });
-</script>
+<script src="~/Scripts/recentNotes.js"></script>
