--- a/NoteApp/Views/List/Index.cshtml
+++ b/NoteApp/Views/List/Index.cshtml
@@ -21,7 +21,7 @@
     {
         @Html.AntiForgeryToken()
         <form>
-            @Html.TextBoxFor(model => model.Name, new { @class = "form-control", @placeholder = "Enter List Name", @required = "required" })
+            @Html.TextBoxFor(model => model.Name, new { @class = "form-control", @placeholder = "Enter List Name", @required = "required" ,@style=" width: 300px !important;"})
             <br />
             <input type="submit" value="Submit" class="btn btn-success">
         </form>
