New controller Added

--- a/NoteApp/Views/List/Index.cshtml
+++ b/NoteApp/Views/List/Index.cshtml
@@ -28,7 +28,7 @@
     }
 </div>
 <hr style=" border: 5px solid green; border-radius: 10px;" />
-@{Html.RenderAction("RecentNotes", "List");}
+@{Html.RenderAction("RecentNotes", "Note");}
 <hr style=" border: 5px solid green; border-radius: 10px;" />
 @{Html.RenderAction("GetLists", "List");}
 <script src="~/Scripts/listIndex.js"></script>
