--- a/NoteApp/Views/Note/EditNote.cshtml
+++ b/NoteApp/Views/Note/EditNote.cshtml
@@ -91,7 +91,7 @@
                         <input type="submit" class="btn btn-primary" value="Update List" style="width: 120%; max-width: 134%;" align-self:center" /><br />
                     </div>
                     <div class="d-flex justify-content-center">
-                        <a href="/List/ShowNotes/@Model.List_Id" style="width: 120%; max-width: 134%; margin-top:5px;  margin-bottom:5px" align-self:center">
+                        <a href="/Note/ShowNotes/@Model.List_Id" style="width: 120%; max-width: 134%; margin-top:5px;  margin-bottom:5px" align-self:center">
                             <input type="button" class="btn btn-primary" value="Back to List" style="    width: 101%; max-width: 134%;" />
                         </a>
                     </div>
