--- a/NoteApp/Views/Note/SearchByTags.cshtml
+++ b/NoteApp/Views/Note/SearchByTags.cshtml
@@ -2,9 +2,8 @@
     @model ListViewModel*@
 @model IEnumerable<NoteApp.Models.NotesModel>
 @{
-    ViewBag.Title = "ShowNotes";
+    ViewBag.Title = "SearchNotes";
 }
-
 @if (Model.Count() == 0)
 {
     <img src="https://cdn.dribbble.com/users/1135689/screenshots/3957784/no-result-found.png" class="center" />
@@ -15,7 +14,6 @@
 }
 else
 {
-    
     <br />
     <a href="/List/Index" class=" btn btn-secondary">
         <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
@@ -23,23 +21,19 @@ else
     </a>
     var a = Model.Count();
     <button class=" btn btn-secondary" style="float:right">
-      Total Notes: &nbsp; @a
-    </button> 
-    <a class=" btn btn-secondary" style="float:right; margin-right: 10px;" href="/List/AddNotes/@Url.RequestContext.RouteData.Values["id"]">
-        <i class="fa fa-plus"></i>
-        Add More Notes 
-    </a>
+        Total Notes: &nbsp; @a
+    </button>
     <div class="card-deck ">
         <div class="row">
             @foreach (var item in Model)
             {
+
                 <!-- Display a div of col-sm-3 containing the card up to n number of times, ie in a loop -->
                 <div class="card border-dark mb-3" style="max-width: 26rem;margin-left:16px;">
                     <div class="card-header bg-transparent border-success" style="text-align:center">
                         <span class="badge bg-secondary">Note Id: &nbsp;@item.NoteId</span>
                     </div>
                     <div class="card-body text-success" style="text-align:center">
-
                         @if (item.NoteFile != null)
                         {
                             FileInfo fi = new FileInfo(item.NoteFile);
@@ -47,7 +41,7 @@ else
                             string extn = fi.Extension;
                             if (extn == ".mp4")
                             {
-                                <video controls="controls" loop muted autoplay width="375" height="300">
+                                <video controls="controls" width="375" height="300">
                                     <source src="@item.NoteFile" type="video/mp4" />
                                 </video>
                             }
@@ -57,30 +51,17 @@ else
                             }
                             else
                             {
-
                                 <img src=" @item.NoteFile" width="375" height="300">
-
                             }
                         }
-                        @{ 
-                            if (item.NoteDesciption != null)
-                            {
-                            <p id="notetext" style="text-align:center" class="card-text summary">@item.NoteDesciption</p>
-                                if (item.NoteDesciption != null && item.NoteDesciption.Length > 250)
-                                {
-                                <a id="readmore" class="btn btn-light btn-sm" href="#">Read More</a>
-                                }
-                            }
-                        }
-                        <a href="@Url.Action("DeleteNote", "Note", new { id = item.NoteId })" class="btn btn-light btn-sm" onclick="return confirm('Are you sure you to delete this Record?');">Delete </a>
-                        <a href="@Url.Action("EditNote", "Note", new { id = item.NoteId })" class="btn btn-light btn-sm">Edit </a>
+                        <p class="card-text">@item.NoteDesciption  </p>
                     </div>
                     <div class="card-footer bg-transparent border-success" style="text-align:center">
                         <span class="badge bg-secondary">Created Date: &nbsp;@item.CreatedDate</span>
                     </div>
-                </div>                              
-                            }
+                </div>
+            }
         </div>
     </div>
 }
-<link href="~/Content/css/showNotes.css" rel="stylesheet" />
+<link href="~/Content/css/searchByTag.css" rel="stylesheet" />
