--- a/NoteApp/Views/Note/ShowNotes.cshtml
+++ b/NoteApp/Views/Note/ShowNotes.cshtml
@@ -25,7 +25,7 @@ else
     <button class=" btn btn-secondary" style="float:right">
       Total Notes: &nbsp; @a
     </button> 
-    <a class=" btn btn-secondary" style="float:right; margin-right: 10px;" href="/List/AddNotes/@Url.RequestContext.RouteData.Values["id"]">
+    <a class=" btn btn-secondary" style="float:right; margin-right: 10px;" href="/Note/AddNotes/@Url.RequestContext.RouteData.Values["id"]">
         <i class="fa fa-plus"></i>
         Add More Notes 
     </a>
